test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/bypass-with-policy-exception/01-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-validate
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: nginx-test-scaling-policy
spec:
  background: false
  failurePolicy: Fail
  rules:
    - match:
        resources:
          kinds:
            - "Deployment/scale"
          names:
            - nginx-test
          namespaces:
            - test-validate
      name: validate-nginx-test
      validate:
        message: 'nginx-test needs to have 2 replicas'
        pattern:
          spec:
            replicas: 2
  validationFailureAction: Enforce
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-test
  name: nginx-test
  namespace: test-validate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - image: nginx
          name: nginx
---
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: allow-scaling-nginx-test
  namespace: test-validate
spec:
  exceptions:
    - policyName: nginx-test-scaling-policy
      ruleNames:
        - validate-nginx-test
  match:
    any:
      - resources:
          kinds:
            - Deployment/scale
          names:
            - nginx-test
