test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/bypass-with-policy-exception/02-script.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: script
spec:
  timeouts: {}
  try:
  - script:
      content: "if kubectl scale deployment nginx-test --replicas=1 -n test-validate
        2>&1 | grep -q 'validation error: nginx-test needs to have 2 replicas' \nthen
        \n  echo \"Test failed. Resource was blocked from scaling.\"\n  exit 1\nelse
        \n  echo \"Tested succeeded. Resource was allowed to scale.\"\n  exit 0 \nfi\n"
