test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/bypass-with-policy-exception/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bypass-with-policy-exception
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: nginx-test-scaling-policy
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
    - apply:
        file: chainsaw-step-01-apply-1-4.yaml
    - assert:
        file: chainsaw-step-01-assert-1-2.yaml
    - assert:
        file: chainsaw-step-01-assert-1-3.yaml
  - name: step-02
    try:
    - script:
        content: kubectl scale deployment nginx-test --replicas=1 -n test-validate
        check:
          # This check below ensures that the string "nginx-test needs to have 2 replicas" isn't found in stderr or else fails
          (contains($stderr, 'nginx-test needs to have 2 replicas')): false
